added new map design and added custom markere due to aot compiling errors

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Apothekenfinder</title>
+  <title>Apothekenfinder - Suchen Sie Apotheken in Ihrer Nähe</title>
+  <meta description="Der Apothekenfinder zeigt Ihnen geeignete Apotheken in Ihrer Nähe. Geben Sie Ihre Postleitzahl oder einen Ort ein und klicken Sie auf Suchen">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <base href="/">
 </head>
